send email cleanup

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -132,7 +132,37 @@ section {
 }
 
 .projects {
-  padding-left: 20px;
+  padding: 3.75%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 0;
+  grid-row-gap: 20px;
+  grid-auto-rows: 1fr;
+}
+
+@media only screen and (min-width: 640px) {
+  .projects {
+    grid-template-columns: 47.5% 47.5%;
+    grid-column-gap: 5%;
+    grid-row-gap: 40px;
+    grid-auto-rows: 1fr;
+
+  }
+  .projects > div {
+    padding: 20px;
+  }
+}
+
+@media only screen and (min-width: 981px) {
+  .projects {
+    grid-template-columns: 30% 30% 30%;
+    grid-row-gap: 50px;
+    grid-auto-rows: 1fr;
+
+  }
+  .projects > div {
+    padding: 30px;
+  }
 }
 
 .section__title--projects {
@@ -440,4 +470,8 @@ ul {
 
 svg tspan {
   fill: white;
+}
+
+.project_image {
+  width: 100%;
 }
