--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -127,7 +127,7 @@ header {
 
 section {
   overflow: hidden;
-  margin: 10%;
+  margin-left: 10%;
   padding: 50px;
 }
 
@@ -167,11 +167,6 @@ section {
 
 .section__title--projects {
   font-size: 28px;
-  margin-bottom: 50px;
-}
-
-
-.project {
   margin-bottom: 50px;
 }
 
@@ -501,7 +496,7 @@ svg tspan {
 }
 
 .project__image-container {
-  width: 250px;
+  width: 400px;
   height: auto;
   overflow: hidden;
   display: flex;
@@ -510,7 +505,7 @@ svg tspan {
 }
 
 .project__image {
-  width: 160px;
+  width: 350px;
   height: auto;
   object-fit: cover;
   transition: transform 0.3s ease;
