--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -25,6 +25,11 @@ header {
   display: flex;
   align-items: center;
   list-style: none;
+  position: fixed;
+  top: 0;
+  z-index: 20;
+  background-color: #000;
+  width: 100%;
 }
 
 .nav__item {
